--- a/index.css
+++ b/index.css
@@ -217,20 +217,20 @@ body{
 }
 
 #home_para_img_1{
-    height: 70px;
-    width: 70px;
+    height: 5vw;
+    width: 5vw;
     margin-right: -30px;
 }
 
 #sub_home_para{
     color: white;
-    font-size: 1.165rem;
+    font-size: 1.36vw;
     text-align: center;
 }
 
 #home_para_img_2{
-    height: 70px;
-    width: 70px;
+    height: 5vw;
+    width: 5vw;
     margin-left: -30px;
 }
 
