--- a/phone_snake.css
+++ b/phone_snake.css
@@ -7,7 +7,7 @@ body{
     height: 100vh;
     width: 100%;
     overflow: hidden;
-    justify-content: flex-end;
+    justify-content: center;
 }
 
 #field{
